<resources>
    <string name="app_name">RestApp</string>
    <string name="menu_usr">Perfil</string>
    <string name="menu_comandas">Comandas</string>
    <string name="menu_info">Información</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_rest">Reast - App 2019</string>
    <string name="menu_mesas">Mesas</string>
    <string name="navigation_drawer_open">Se abrió</string>
    <string name="navigation_drawer_close">Se cerró</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="login">Iniciar sesión</string>

    <!-- TODO FRAMENTS -->

    <!-- TODO FRAMENTS - Usuario -->
    <string name="nombre">Nombre(s)</string>
    <string name="apellidos">Apellidos</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ID">ID</string>
    <string name="guardar">Guardar cambios</string>


    <!-- TODO FRAMENTS - Mesas -->
    <string name="nombreMesero">Nombre Mesero</string>
    <string name="mensajeb">Bienvenido, </string>
    <string name="seleccionaMesa">Selecciona una mesa:</string>
    <string name="simbologia">Simbología</string>
    <string name="mesaActivada">Activada</string>
    <string name="mesaDesactivada">Desactivada</string>
    <string name="piso1">Piso 1</string>
    <string name="piso2">Piso 2</string>
    <!-- TODO FRAMENTS - ComandaRecycler -->
    <string name="comandaReclycerTitulo">Comanda de la mesa </string>
    <string name="btnMasPlatillos">Agregar más platillos</string>
    <string name="btnCerrarComanda">Cerrar comanda</string>
    <string name="btnVerComanda">Ver comanda</string>

    <!-- TODO FRAMENTS - Comanda-->
    <string name="htxtcant">Cantidad</string>
    <string name="htxtprod">Producto</string>
    <string name="htxtprecio">Precio</string>

    <!-- TODO ACTIVITIES -->

    <!-- TODO ACTIVITIES - Menu -->
    <string name="platillos">Platillos</string>
    <string name="bebidas">Bebidas</string>
    <string name="postres">Postres</string>

    <!-- TODO ACTIVITIES - Menu -->
    <string name="txtUsr">Usuario</string>
    <string name="txtPass">Constraseña</string>
    <string name="btnSesion">Iniciar sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
