<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"
       card_view:cardElevation="10dp"
       card_view:cardUseCompatPadding="true" -->

    <android.support.v7.widget.CardView

        android:id="@+id/cv_comanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">



            <TextView
                android:id="@+id/nombre_comanda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:textSize="22sp"
                android:text="@string/comandaReclycerTitulo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cerrar_comanda"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:backgroundTint="#5C5A5A"
                    android:text="@string/btnCerrarComanda"
                    android:textColor="#FFF" />

                <Button
                    android:id="@+id/btn_mas_platillos"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/btnMasPlatillos"
                    android:textColor="#FFF" />
            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:textColor="#FFF"
                android:text="@string/btnVerComanda" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>