<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".vistas.UsuarioFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="109dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="205dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textView"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:text="@string/ID"
                android:layout_marginTop="8dp"
                android:gravity="bottom" />

            <EditText
                android:id="@+id/txtId"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:enabled="false"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:text="@string/nombre"
                android:layout_marginTop="8dp"
                android:gravity="bottom" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:text="@string/apellidos"
                android:layout_marginTop="8dp"
                android:gravity="bottom" />

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:text="@string/contrasenia"
                android:layout_marginTop="8dp"
                android:gravity="bottom" />

            <EditText
                android:id="@+id/txtContrasenia"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_guardar_c_usuario"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="390dp"
                android:layout_height="44dp"
                android:layout_marginTop="28dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/guardar"
                android:textColor="#FFF" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>